// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      tomato sauce
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mustard
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mayo
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": 16,
          "flex": 1,
          "height": 32,
          "margin": 4,
          "minWidth": 100,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="testy text"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "flex": 1,
            "fontSize": 13,
            "height": 32,
            "margin": 0,
            "padding": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="monkey gland sauce"
    />
  </View>
</View>
`;

exports[`Tags renderTag prop allows me to render a custom tag with a function 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      },
      undefined,
      undefined,
    ]
  }
>
  <Text>
    palm
  </Text>
  <Text>
    oil
  </Text>
  <Text>
    sucks
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": 16,
          "flex": 1,
          "height": 32,
          "margin": 4,
          "minWidth": 100,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "flex": 1,
            "fontSize": 13,
            "height": 32,
            "margin": 0,
            "padding": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`Tags should render props correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      tomato sauce
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mustard
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mayo
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": 16,
          "flex": 1,
          "height": 32,
          "margin": 4,
          "minWidth": 100,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "flex": 1,
            "fontSize": 13,
            "height": 32,
            "margin": 0,
            "padding": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="monkey gland sauce"
    />
  </View>
</View>
`;
